--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "build": "hardhat compile",
     "test": "hardhat test",
-    "deploy": "hardhat run scripts/deploy-full.ts",
-    "deploy:local": "hardhat run scripts/deploy.ts"
+    "deploy": "hardhat run scripts/deploy-full.ts"
   },
   "keywords": [],
   "author": "",
